# dec128

./: Makefile.am  autogen.sh  configure.ac  dec128.c  test_dec128.c
src/: Makefile.am  dec128.c  dec128.h
test/: Makefile.am  test-dec128.c  test_dec128.c  test_decode_DPD.c  test_encode_DPD.c
